--- a/templates/main/base.html.twig
+++ b/templates/main/base.html.twig
@@ -17,6 +17,8 @@
     {% include 'main/_embed/_header.html.twig' %}
 
     <main class="main">
+        {% include 'main/_embed/_flash_message.html.twig' %}
+
         {% block body %}
         {% endblock %}
     </main>
